--- a/requirements.txt
+++ b/requirements.txt
@@ -1,138 +1,21 @@
-dgl==1.1.2
+# --- Core dependencies ---
+# PyTorch (CPU-only default)
+torch>=2.2,<3.0
+
+# For GPU users (uncomment the next line for CUDA 12.1, or replace with your CUDA version)
+# torch --index-url https://download.pytorch.org/whl/cu121
+
+dgl==1.1.2 # required by TxGNN
+pandas==1.5.3 # TxGNN uses DataFrame.append(), removed in pandas>=2.0
+numpy>=1.23.0,<2.0
+
+# --- TxGNN (Harvard MIMS GitHub) ---
+git+https://github.com/mims-harvard/TxGNN.git
+
+# --- Data processing & analysis ---
+polars>=1.0
+networkx>=3.0
+matplotlib>=3.7
+
+# --- Optional: Jupyter environment for notebooks ---
 notebook
-numpy==1.23.5 # version of numpy compatable with pandas<2.0
-pandas==1.5.3 # txgnn uses append() which was removed in pandas 2.0
-
-# torch not pinned — install manually for GPU
-# TxGNN installed from GitHub, not PyPI
-
-
-accelerate==0.33.0
-aiobotocore==2.25.1
-aiohappyeyeballs==2.6.1
-aiohttp==3.13.2
-aioitertools==0.12.0
-aiosignal==1.4.0
-anndata==0.12.5
-annotated-types==0.7.0
-appnope==0.1.4
-array-api-compat==1.12.0
-asttokens==3.0.0
-attrs==25.4.0
-beautifulsoup4==4.14.2
-botocore==1.40.61
-cellxgene-census==1.15.0
-certifi==2025.10.5
-charset-normalizer==3.4.4
-comm==0.2.3
-contourpy==1.3.3
-crc32c==2.8
-cycler==0.12.1
-dataclasses==0.6
-datasets==2.19.2
-debugpy==1.8.17
-decorator==5.2.1
-dill==0.3.8
-donfig==0.8.1.post1
-et_xmlfile==2.0.0
-evaluate==0.4.2
-executing==2.2.1
-filelock==3.20.0
-fonttools==4.60.1
-frozenlist==1.8.0
-fsspec==2024.3.1
-fuzzywuzzy==0.18.0
-gget==0.29.3
-h5py==3.15.1
-hf-xet==1.2.0
-huggingface-hub==0.36.0
-idna==3.11
-ipykernel==7.1.0
-ipython==9.6.0
-ipython_pygments_lexers==1.1.1
-ipywidgets==8.1.8
-jedi==0.19.2
-Jinja2==3.1.6
-jmespath==1.0.1
-joblib==1.5.2
-jupyter_client==8.6.3
-jupyter_core==5.9.1
-jupyterlab_widgets==3.0.16
-kiwisolver==1.4.9
-legacy-api-wrap==1.5
-llvmlite==0.45.1
-lxml==6.0.2
-MarkupSafe==3.0.3
-matplotlib==3.10.7
-matplotlib-inline==0.2.1
-mpmath==1.3.0
-multidict==6.7.0
-multiprocess==0.70.16
-mysql-connector-python==9.5.0
-natsort==8.4.0
-nest-asyncio==1.6.0
-networkx==3.5
-numba==0.62.1
-numcodecs==0.16.3
-openpyxl==3.1.5
-packaging==25.0
-parso==0.8.5
-patsy==1.0.2
-pexpect==4.9.0
-pillow==12.0.0
-platformdirs==4.5.0
-polars==1.35.1
-polars-runtime-32==1.35.1
-prompt_toolkit==3.0.52
-propcache==0.4.1
-psutil==7.1.3
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pyarrow==12.0.1
-pyarrow-hotfix==0.7
-pydantic==2.12.3
-pydantic_core==2.41.4
-Pygments==2.19.2
-pynndescent==0.5.13
-pyparsing==3.2.5
-pytdc==1.1.15
-python-dateutil==2.9.0.post0
-pytz==2025.2
-PyYAML==6.0.3
-pyzmq==27.1.0
-rdkit==2023.9.6
-regex==2025.11.3
-requests==2.32.5
-s3fs==2024.3.1
-safetensors==0.6.2
-scanpy==1.11.5
-scikit-learn==1.7.2
-scipy==1.16.3
-seaborn==0.13.2
-session-info2==0.2.3
-six==1.17.0
-somacore==1.0.11
-soupsieve==2.8
-stack-data==0.6.3
-statsmodels==0.14.5
-sympy==1.14.0
-threadpoolctl==3.6.0
-tiledb==0.29.1
-tiledbsoma==1.11.4
-tokenizers==0.21.4
-torch==2.9.0
-tornado==6.5.2
-tqdm==4.67.1
-traitlets==5.14.3
-transformers==4.50.3
-typing-inspection==0.4.2
-typing_extensions==4.15.0
-tzdata==2025.2
-umap-learn==0.5.9.post2
-urllib3==2.5.0
-wcwidth==0.2.14
-widgetsnbextension==4.0.15
-wrapt==1.17.3
-xxhash==3.6.0
-yarl==1.22.0
-zarr==3.1.3
